HTML fixes for IE and Firefox * Position variables added back to briclogo * Desk-top banner now stretches across screen and balanced out Sort-By dropdown * Meta info in Assets now displays properly (was all on one line) in IE * Increased Body section of item of workspace to be as large as possible (allowing maximum sensible desk name length) * Took out additional gap in IE caused by 'jump' div always displaying

--- a/comp/media/css/style.css
+++ b/comp/media/css/style.css
@@ -26,7 +26,7 @@ textarea {
 #navFrame         { background: #666633; }
 #help             { background: white; padding: 10px; }
 
-#bricLogo { position: absolute; background: white; padding-top: 8px; }
+#bricLogo { position: absolute; top: 0; left: 0; background: white; padding-top: 8px; }
 #mainContainer { position: relative; margin: 0px 8px 8px 8px; min-width: 740px; }
 #sideNav { position: absolute; top: 55px; left: 0; width: 150px; z-index: 200; border: 0; }
 #contentContainer { padding: 8px 0 0 158px; }
@@ -175,9 +175,9 @@ div.debug dt:after {
 }
 
 .jump { float: right; padding-top: 3px; }
-.desk-top { background: #666633; color: white; padding: 3px 5px; margin: 0 200px 10px 0; }
+.desk-top { position: relative; background-color: #666633; color: white; padding: 3px 5px; margin: 0px 0px 10px 0px; }
 .desk-top h1 { float: left; font-size: 1.2em; padding: 2px 5px; line-height: 1.4em; margin: 0; }
-.desk-top .sort { float: right; text-align: right; font-size: 1em; }
+.desk-top .sort { float: right; text-align: right; font-size: 1em;  padding: 2px 20px 0px 0px; }
 .desk-top .sort select { font-size: 1em; }
 
 .desk .buttonbar { text-align: right; }
@@ -243,7 +243,7 @@ div.debug dt:after {
 .desk .item .body { position: relative; }
 
 .desk .item dl { 
-    margin: 0 250px 0 0; 
+    margin: 0 225px 0 0; 
     padding: 0; 
     border-style: solid;
     border-color: #CCCC99;
@@ -266,10 +266,10 @@ div.debug dt:after {
 .desk .item .actions { 
     position: absolute;
     top: 0; right: 0px;
-    width: 230px;
+    width: 210px;
     background: transparent;
     border-top: solid white 1px;
-    padding: 0 10px;
+    padding: 0 5px;
 }
 .desk .item .actions p { margin: 5px 0 0 0; }
 .desk .item .actions .mover { 
@@ -438,9 +438,9 @@ td.checkbox, td.radio { width: 10%; text-align: center; }
 
 dl.viewmeta { margin: 0; }
 dl.viewmeta dt,
-dl.viewmeta dd { font-size: 11px; border-bottom: solid white 1px; padding: 2px 0; float: left; }
+dl.viewmeta dd { font-size: 11px; border-bottom: solid white 1px; padding: 2px 0; }
 dl.viewmeta dt {
-    clear: left;
+    float: left;
     width: 130px;
     padding-right: 5px;
     text-align: right;
